--- a/example/hello_world.haml
+++ b/example/hello_world.haml
@@ -5,9 +5,5 @@
   %body
     %div
       hello, world
-    %script{:type => "text/javascript", :src=>"spec_helper.js"}
-
-/ Local Variables:
-/ mode:auto-revert
-/ End:
+    / %script{:type => "text/javascript", :src=>"spec_helper.js"}
 
