lots of rework to get embedded specs working right

--- a/example/hello_world.html.haml
+++ b/example/hello_world.html.haml
@@ -5,5 +5,4 @@
   %body
     %div
       hello, world
-    / %script{:type => "text/javascript", :src=>"spec_helper.js"}
-
+    %script{:src=>"spec_helper.js"}
